# biome-nv

./: .gitignore  AGENTS.md  README.md  start-local.sh
backend/: .env.example  .gitignore  backboard.py  backboard_client.py  db.py  deps.py  main.py  pyproject.toml  routes.py  schemas.py
docs/: MULTI-TENANT.MD  PLAN.MD  STEP-4-MODULAR-SPLIT.md  prompt.md
docs/Backboard Challenge/: invitation.md  yourein.md
docs/stitch_biome_ai_strength_coach/analyst_professional/: DESIGN.md
docs/stitch_biome_ai_strength_coach/ask_coach_biome/: code.html
docs/stitch_biome_ai_strength_coach/log_workout_biome/: code.html
docs/stitch_biome_ai_strength_coach/progress_biome/: code.html
docs/stitch_biome_ai_strength_coach/today_biome/: code.html
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ProfileSelectorModal.tsx  Sidebar.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/screens/: AskCoachScreen.tsx  LogWorkoutScreen.tsx  LoginScreen.tsx  ProgressScreen.tsx  TodayScreen.tsx
terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
