[project]
name = "biome-backend"
version = "0.1.0"
description = "Biome AI Strength Coach backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "oracledb>=2.5.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "groq>=0.13.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
default-groups = []
